# lmcas

./: .clang-format  .dockerignore  .gitignore  README.md  REUSE.toml  flake.nix
.github/workflows/: tests.yml
.gitlab/merge_request_templates/: default.md
annotation-pass/: CMakeLists.txt  default.nix
annotation-pass/src/: Pass.cpp
ci/: github-actions-run-tests.sh
deliv/: README.txt  bashrc  default.nix  test_http.py
deliv/cp1/: spec.json
deliv/curl/: build.sh  curlrc  neck.patch  spec.json
deliv/dropbear/: build.sh  neck.patch  spec.json
deliv/wget/: build.sh  neck.patch  passwd  spec.json  wgetrc
doc/: book.toml  default.nix  mdbook-asciinema.py  mdbook-toc.nix
doc/src/: SUMMARY.md  introduction.md
etc/: env.sh
instrumentation-libc/: 0001-disable-vdso.patch  0002-use-stdatomic.patch  0003-remove-isatty-ioctl-in-stdout.patch  0004-wipe-at_random.patch  default.nix
instrumentation-parent/: Cargo.nix  Cargo.toml  README.md  default.nix
instrumentation-parent/src/: errors.rs  from_reg.rs  lib.rs  pod.rs
instrumentation-parent/src/syscalls/: macros.rs  mod.rs  structures.rs  sys_bind.rs  sys_brk.rs  sys_clock_getres.rs  sys_clock_gettime.rs  sys_close.rs  sys_connect.rs  sys_epoll_create1.rs  sys_fcntl.rs  sys_fstat.rs  sys_geteuid.rs  sys_getgid.rs  sys_getgroups.rs  sys_getpid.rs  sys_getppid.rs  sys_getuid.rs  sys_ioctl.rs  sys_listen.rs  sys_lseek.rs  sys_memfd_create.rs  sys_mkdir.rs  sys_mmap.rs  sys_mprotect.rs  sys_munmap.rs  sys_open.rs  sys_openat.rs  sys_pipe.rs  sys_pread.rs  sys_prlimit.rs  sys_read.rs  sys_readv.rs  sys_rt_sigaction.rs  sys_rt_sigprocmask.rs  sys_sched_getaffinity.rs  sys_setsockopt.rs  sys_socket.rs  sys_stat.rs  sys_umask.rs  (+3 more)
instrumentation-pass/: .gitignore  CMakeLists.txt  default.nix
instrumentation-pass/src/: Annotation.cpp  Annotation.h  FindNeck.cpp  FindNeck.h  FmtLlvm.h  FunctionPtrs.cpp  FunctionPtrs.h  InstrumentControlFlow.cpp  InstrumentControlFlow.h  InstrumentLibc.cpp  InstrumentLibc.h  Pass.cpp
instrumentation-runtime/: .gitignore  Makefile  default.nix  lmcas_instrumentation_runtime.c  lmcas_instrumentation_runtime.h
instrumentation-runtime/example/: main.c  spec.json
make-external-list/: default.nix  pyproject.toml  setup.py
make-external-list/make_external_list/: ar.py  elf.py  main.py
musl-gclang/: 0001-Disable-putting-the-optnone-attribute-on-functions-c.patch  0001-add-linker-flag-embedding.patch  0002-dont-include-object-files.patch  0003-add-resource-dir-flag.patch  LICENSE  default.nix  gllvm.nix  ld.musl-gclang.in  musl-gclang.in  stdenv.nix
neck-miner/: .gitignore  CMakeLists.txt  Dockerfile  anno.txt  build.sh  check-dataset-target.sh  default.nix  example.txt  install.sh  login-shell.sh  make_verify_necks_json.sh  neck-miner-docker.sh  phasar-llvm-12.patch  phasar.nix  pkeller-regtest  reach.py  reach.txt  run-neck-verification-full.sh  run-neck-verification-new-alg.sh  run-verify-neck-statistics.sh  search.txt  verify-necks-with-statistics.sh
neck-miner/cmake/: neckid_macros.cmake
neck-miner/config/: cmd-tool-config.json
neck-miner/include/: FmtLlvm.h
neck-miner/lib/: CMakeLists.txt
neck-miner/lib/GuiNeSS/: Annotation.cpp  CMakeLists.txt  GuiNeSS.cpp  SyscallWrappers.cpp  Tape.cpp  TapeWalker.cpp
neck-miner/neck_verification/: generate-statistics-plots.py  test_verify_necks.py  verify_necks.py  verify_necks_config.json  verify_necks_config_full.json  verify_necks_config_new_alg.json
neck-miner/tools/: CMakeLists.txt
neck-miner/tools/neck-miner/: CMakeLists.txt  neck-miner.cpp
nix/: fmt.nix
nix/tmux/: README.md  default.nix  tmux.conf
nix/vim/: README.md  default.nix  extra-config.vim  package.nix
prt-tests/test/: .gitignore  common.pl  defaults.pl  dropbear.prt  lmcas.pl  run-tests.sh  simple.prt  wget.json  wget.prt  zlib.pl
prt-tests/tools/: check-for-running-container  run-doc-server  start-image  wait-for-container
sighup-pass/: .gitignore  CMakeLists.txt  default.nix
sighup-pass/src/: Pass.cpp
specialization-pass/: .gitignore  CMakeLists.txt  default.nix
specialization-pass/include/: Annotation.h  FindNeck.h  InsertMainArgs.h  MakeNeckContinuation.h  Spec.h  StackFrame.h  Tape.h  UnrollTape.h  UpdateInstructionUtils.h
specialization-pass/src/: Annotation.cpp  FindNeck.cpp  InsertMainArgs.cpp  MakeDispatchMain.cpp  MakeDispatchMain.h  MakeNeckContinuation.cpp  Pass.cpp  Spec.cpp  SyscallHandlers.cpp  SyscallHandlers.h  SyscallVisitor.h  SyscallWrappers.cpp  SyscallWrappers.h  Tape.cpp  UnrollTape.cpp  UpdateInstructionUtils.cpp
specialization-pass/src/SyscallVisitor/: Structures.cpp  bind.cpp  brk.cpp  clock_getres.cpp  clock_gettime.cpp  close.cpp  connect.cpp  epoll_create1.cpp  fcntl.cpp  fstat.cpp  geteuid.cpp  getgid.cpp  getgroups.cpp  getpid.cpp  getppid.cpp  getuid.cpp  ioctl.cpp  listen.cpp  lseek.cpp  mkdir.cpp  mmap.cpp  mprotect.cpp  munmap.cpp  open.cpp  openat.cpp  pipe.cpp  pread.cpp  prlimit.cpp  read.cpp  readv.cpp  rt_sigaction.cpp  rt_sigprocmask.cpp  sched_getaffinity.cpp  setsockopt.cpp  socket.cpp  stat.cpp  umask.cpp  uname.cpp  write.cpp  writev.cpp
tabacco-driver/: default.nix  pyproject.toml  setup.py
tabacco-driver/driver/: __init__.py  drive.py  main.py  neck_miner.py  robustness.py  spec.py  utils.py
tabacco-helpers/: at_neck.c  default.nix  noop_sighandler.c
targets/mongoose/: Makefile  README.md  default.nix
targets/tabacco-cps/: Makefile  default.nix
targets/uwisc/: README.md  (+1 more)
test/: Dockerfile  build-tests  build-tests.nix  compare_results_dirs.py  compare_sizes.py  debloat.nix  lmcas-run-tests
unit-tests/: check-determinism.c  check-determinism.json  check-determinism.nix  check-robustness.nix  check_bind.nix  check_bind_to_zero_port_ipv4.c  check_bind_to_zero_port_ipv4.json  check_bind_to_zero_port_ipv6.c  check_bind_to_zero_port_ipv6.json  check_connect.c  check_connect.json  check_connect.nix  check_mock.c  check_mock.json  check_mock.nix  check_preneck_noexec.c  check_preneck_noexec.nix  check_preneck_noexec.py  check_term_size.c  check_term_size.nix
utils/: libsegfault.nix
(+224 files in other folders)
