# SPDX-FileCopyrightText: 2022-2024 Smart Information Flow Technologies
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "instrumentation-parent"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.56"
bstr = { version = "0.2.17", features = ["serde1"] }
clap = { version = "3.2.7", features = ["derive"] }
log = "0.4.17"
nix = "0.23.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
stderrlog = "0.5.1"
